--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,10 @@
     <script src="https://s.tbcdn.cn/s/kissy/1.2.0/kissy-min.js"></script>
 </head>
 <body>
+{% include header.html %}
+
 {{ content }}
+
+{% include footer.html %}
 </body>
 </html>
