--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
-<header class="pub_header">
-    公共头文件
+<header>
+    <div class="inner">
+        <h1>diy1818</h1>
+        <h2>my blog</h2>
+        <a href="https://github.com/anryzhang/myBlog" class="button"><small>View project on</small>GitHub</a>
+    </div>
 </header>
