--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 <body>
 
 {% include header.html %}
-<div id="content-wrapper">
+<div id="content-wrapper" class="inner">
 {{ content }}
 </div>
 {% include footer.html %}
