--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,12 @@
     <title>{{ page.title }}</title>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="http://anryzhang.github.io/myBlog/stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="http://anryzhang.github.io/myBlog/stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="http://anryzhang.github.io/myBlog/stylesheets/print.css" media="print" />
     <script src="https://s.tbcdn.cn/s/kissy/1.2.0/kissy-min.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
 <body>
