--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="http://anryzhang.github.io/myBlog/stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="http://anryzhang.github.io/myBlog/stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="http://anryzhang.github.io/myBlog/stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="http://anryzhang.github.io/myBlog/stylesheets/layout.css" media="print" />
     <script src="https://s.tbcdn.cn/s/kissy/1.2.0/kissy-min.js"></script>
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
