--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,6 +1,6 @@
 /*base-footer start*/
 .base-footer {
-    background: url(../images/fonter_bg.png) repeat-x 0 0;
+    background: url(../images/fonter_bg.png) #0390C8 repeat-x 0 0;
     width: 100%;
     height: 91px;
     margin-top: 10px;
