--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,14 @@
 <header>
     <div class="inner">
         <h1>diy1818</h1>
-        <h2>my blog</h2>
+        <h2>
+            my blog
+            <small>
+                <a href="www.diy1818.com" target="_blank">
+                    diy1818
+                </a>
+            </small>
+        </h2>
         <a href="https://github.com/anryzhang/myBlog" class="button"><small>View project on</small>GitHub</a>
     </div>
 </header>
