--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
         <h2>
             my blog
             <small>
-                <a href="www.diy1818.com" target="_blank">
+                <a href="http://www.diy1818.com" target="_blank">
                     diy1818
                 </a>
             </small>
