--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,3 +1,7 @@
+header small{
+    color: #9ddcff;
+}
+
 /*base-footer start*/
 .base-footer {
     background: url(../images/fonter_bg.png) #0390C8 repeat-x 0 0;
