--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,15 +30,17 @@ layout: default
 </div>
 
 <!--评论-->
+
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-    var disqus_shortname = 'anryzhang.github.io/myBlog'; // 注意，这里的 example 要替换为你自己的短域名
-    /* * * 下面这些不需要改动 * * */
+    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    var disqus_shortname = 'anryzhang'; // required: replace example with your forum shortname
+
+    /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
