--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
         {% if page.author != null %}
         By {{ page.author }}
         {% else %}
-        By 熊猫人
+        By anry
         {% endif %}
         {% if page.tags%}
         <div class="tag">
@@ -26,20 +26,7 @@ layout: default
     <div class="postcontent-entry">
         <div class="cleared"></div>
         {{ content }}
-        <!--评论-->
 
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'anryzhang'; // required: replace example with your forum shortname
-
-            /* * * DON'T EDIT BELOW THIS LINE * * */
-            (function() {
-                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-        </script>
     </div>
 </div>
 
