--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     <ul class="nav-list">
 
         <li class="nav-item nav-item-active">
-            <a href="/">
+            <a href="http://anryzhang.github.io/myBlog/">
                 首页
             </a>
 
