--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,28 +12,19 @@
         <a href="https://github.com/anryzhang/myBlog" class="button"><small>View project on</small>GitHub</a>
     </div>
 </header>
-
+<!--菜单-->
 <nav class="nav" id="violet-nav">
     <ul class="nav-list">
-
         <li class="nav-item nav-item-active">
-            <a href="http://anryzhang.github.io/myBlog/">
+            <a href="http://anryzhang.github.io/myBlog/" target="_blank">
                 首页
             </a>
-
         </li>
-        <li class="nav-item ">
-            <a href="/">
-                作品
-            </a>
 
-        </li>
         <li class="nav-item ">
-            <a href="https://github.com/anryzhang/myBlog">
+            <a href="https://github.com/anryzhang/myBlog" target="_blank">
                 博客源代码
             </a>
-
         </li>
-
     </ul>
 </nav>
