--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
                     {% for link in site.follow %}
                     <a class="follow" href="{{ link.url }}" target="_blank"><i class="fa {{ link.class }}"></i></a>
                     {% endfor %}
-                    
+
                 </div>
             </div>
         </footer>
@@ -95,6 +95,17 @@
                 s.src = '//' + disqus_shortname + '.disqus.com/count.js';
                 (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
             }());
+        </script>
+        <script type="text/javascript">
+            /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+            var disqus_shortname = 'anryzhang'; // required: replace example with your forum shortname
+
+            /* * * DON'T EDIT BELOW THIS LINE * * */
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
         </script>
         {% else %}
             {% if site.duoshuo.config %}
