--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 </head>
 <body id="violet">
     <div class="page-wrapper">
-        <section class="head" id="violet-head">
+        <div class="head" id="violet-head">
             <header class="header" id="violet-header">
                 <h1 class="logo"><a href="{{ site.url }}">{{ site.title }}</a></h1>
                 <h2 class="subtitle">{{ site.subTitle }}</h2>
@@ -44,7 +44,7 @@
                     {% endfor %}
                 </ul>
             </nav>
-        </section>
+        </div>
         <section class="main" id="violet-main">
             {{ content }}
         </section>
