--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,14 +50,35 @@
         </section>
         <footer class="foot" id="violet-foot">
 
-            <div class="copyright">
-                <div class="copyright-cnt fn-clear">
-                    {% for link in site.follow %}
-                    <a class="follow" href="{{ link.url }}" target="_blank"><i class="fa {{ link.class }}"></i></a>
-                    {% endfor %}
+            <div class="copyright"></div>
+            <div class="footer-cover">
+                <p>
+                    <span>联系方式：13136183225</span>
+                    <span>QQ:2661659658</span>
+                    <span>E-mail:zr8732@126.com</span>
 
-                </div>
+                </p>
+
+                <p>Copyright DIY1818设计网.com All Right Rserved</p>
+
+                <p>
+                    <a href="/">首页</a>|
+                    <a href="">联系我们</a>|
+                    <a href="www.diy1818.com/data/sitemap.html">网站地图</a>
+                    <a href="www.diy1818.com/data/rssmap.html">Rss</a>
+
+
+                    <script type="text/javascript">
+                        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+                        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fce242692a4fce0b429a3be6166c99a41' type='text/javascript'%3E%3C/script%3E"));
+                    </script><script src=" http://hm.baidu.com/h.js?ce242692a4fce0b429a3be6166c99a41" type="text/javascript"></script><a href="http://tongji.baidu.com/hm-web/welcome/ico?s=ce242692a4fce0b429a3be6166c99a41" target="_blank"><img border="0" src="http://eiv.baidu.com/hmt/icon/21.gif" width="20" height="20"></a>
+                    <script type="text/javascript">
+                        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+                        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F9c6aedd7b614d60dce2d352e52e53cc2' type='text/javascript'%3E%3C/script%3E"));
+                    </script><script src=" http://hm.baidu.com/h.js?9c6aedd7b614d60dce2d352e52e53cc2" type="text/javascript"></script>
+                </p>
             </div>
+
         </footer>
     </div>
 
