--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,10 +62,10 @@
                 <p>Copyright DIY1818设计网.com All Right Rserved</p>
 
                 <p>
-                    <a href="/">首页</a>|
-                    <a href="">联系我们</a>|
-                    <a href="www.diy1818.com/data/sitemap.html">网站地图</a>
-                    <a href="www.diy1818.com/data/rssmap.html">Rss</a>
+                    <a href="{{site.url}}">首页</a>|
+                    <a href="http://www.diy1818.com/a/aboutus/index.html">联系我们</a>|
+                    <a href="http://www.diy1818.com/data/sitemap.html">网站地图</a>
+                    <a href="http://www.diy1818.com/data/rssmap.html">Rss</a>
 
 
                     <script type="text/javascript">
