--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,7 +91,7 @@
             headImgArr.push("{{ site.url }}{{ imgsrc.item }}");
         {% endfor %}
         if(headImgArr.length <= 0) {
-            headImgArr = ["{{ site.url }}/themes/assets/images/hdbg3.jpg"];
+            headImgArr = ["http://anryzhang.github.io/myBlog/themes/assets/images/hdbg3.jpg"];
             var item = 0;
         } else {
             var item = Math.floor(Math.random() * (headImgArr.length));
