--- a/themes/assets/css/style.css
+++ b/themes/assets/css/style.css
@@ -211,10 +211,7 @@ a:hover {
     height: auto;
     background: #f6f6f6;
 }
-.main-article pre{
-    color: #008000;
-    font-weight: bold;
-}
+
 .main-article:nth-child(2n) {
     background: #fff;
 }
@@ -423,12 +420,14 @@ a:hover {
     padding: 13px 20px;
     background-color: #F4F4F6;
     clear: both;
-    color: #22272A;
+   /* color: #22272A;*/
     overflow: auto;
     font: 14px/22px Consolas, "Courier New", Courier, monospace;
     -webkit-border-radius: 2px;
        -moz-border-radius: 2px;
             border-radius: 2px;
+    color: #008000;
+    font-weight: bold;
 }
 .main-article code {
     background: #f6f6f6;
