--- a/themes/assets/css/style.css
+++ b/themes/assets/css/style.css
@@ -156,10 +156,10 @@ a:hover {
 }
 .subtitle {
     line-height: 32px;
-    font-size: 16px;
+    font-size: 12px;
     color: rgba(255,255,255,0.4);
     font-family: Georgia, "Times New Roman", "Hiragino Mincho Pro", "Songti SC", "SimSun", sans-serif;
-    font-style: italic;
+    /*font-style: italic;*/
 }
 #violet-nav {
     width: 100%;
