--- a/themes/assets/css/style.css
+++ b/themes/assets/css/style.css
@@ -155,11 +155,12 @@ a:hover {
     color: rgba(0, 0, 0, 0.8);
 }
 .subtitle {
-    line-height: 32px;
-    font-size: 12px;
+    line-height: 22px;
+    font-size: 16px;
+    width: 160px;
     color: rgba(255,255,255,0.4);
     font-family: Georgia, "Times New Roman", "Hiragino Mincho Pro", "Songti SC", "SimSun", sans-serif;
-    /*font-style: italic;*/
+    font-style: italic;
 }
 #violet-nav {
     width: 100%;
