--- a/demo/gulp/dev/css/scss/s.scss
+++ b/demo/gulp/dev/css/scss/s.scss
@@ -9,6 +9,10 @@ ul{
     font-size:px2rem(24);
     margin:px2rem(0);
     padding:px2rem(0);
+    color: red;
+    background: #000;
+    line-height:px2rem(98);
+    text-align: center;
   }
 
 }
