--- a/themes/assets/css/style.css
+++ b/themes/assets/css/style.css
@@ -128,7 +128,7 @@ a:hover {
     width: 100%;
     height: 260px;
     background-color: #fff;
-    background-image: url(../images/hdbg03.jpg);
+    /*background-image: url(../images/hdbg03.jpg);*/
     background-size: cover;
     background-position: 50% 50%;
     background-repeat: no-repeat;
