--- a/demo/webpack_react/src/css/common/header.scss
+++ b/demo/webpack_react/src/css/common/header.scss
@@ -4,6 +4,8 @@
 @charset "UTF-8";
 @import "base.scss";
 
+$colo:green;
+
 .nav-box{
   width:100%;
   height:60px;
@@ -14,5 +16,11 @@
   a{
     display: inline-block;
     padding:0 10px;
+    color: $colo;
+    cursor: pointer;
+
   }
 }
+
+
+
