--- a/demo/webpack_react/src/css/plugins/switchbox.scss
+++ b/demo/webpack_react/src/css/plugins/switchbox.scss
@@ -10,7 +10,7 @@
   background: #e2e2e2;
   margin-bottom: 20px;
   .switch-cont {
-    position: relative;
+    position: absolute;
     top: 0;
     left: 0;
     height: 100px;
