--- a/template/web/index.ejs
+++ b/template/web/index.ejs
@@ -7,6 +7,7 @@
     <%if(env === 'production'){%>
         <link rel="stylesheet" href="/web_index/index.css">
     <%}%>
+    <% include ./../common/common_js.ejs%>
 </head>
 <body>
 <%= title%><br>
