--- a/assets/common/common.scss
+++ b/assets/common/common.scss
@@ -3,15 +3,9 @@ body {
     font-size: 14px;
 }
 
-.total-container {
-    width: 160px;
-    margin: 10px 0 0 10px;
-    padding: 10px;
-    border: 1px dotted #369;
+.test{
+    width: 100px;
+    height: 100px;
+    background: url('./common_image.png');
 }
 
-.image-example-common {
-    width: 60px;
-    height: 60px;
-    background: url(common_image.png) no-repeat;
-}
