--- a/template/admin/index.ejs
+++ b/template/admin/index.ejs
@@ -10,17 +10,7 @@
 </head>
 <body>
 
-<div class="J_loginBox login_box">
-    <div class="item_label">
-        用户名: <input type="text" class="J_name" >
-    </div>
-    <div class="item_label">
-        密&nbsp;&nbsp; 码: <input type="password" class="J_password">
-    </div>
-    <div class="item_label">
-        <input type="button" value="提交" class="J_loginBtn">
-    </div>
-</div>
+登录成功
 
 <script src="/admin_index.build.js"></script>
 
