退出登录完成

--- a/assets/common/common.scss
+++ b/assets/common/common.scss
@@ -9,3 +9,11 @@ body {
     background: url('./common_image.png');
 }
 
+.login_out{
+    display: inline-block;
+    cursor: pointer;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius:3px;
+}
+
