--- a/template/admin/login.ejs
+++ b/template/admin/login.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title><%= title%></title>
     <% if (env=='production'){%>
-    <link rel="stylesheet" href="/admin_index.build.css" />
+    <link rel="stylesheet" href="/admin_login.build.css" />
     <%}%>
     <% include ./../common/common_js.ejs%>
 </head>
@@ -22,7 +22,7 @@
     </div>
 </div>
 
-<script src="/admin_index.build.js"></script>
+<script src="/admin_login.build.js"></script>
 
 <%if(env !== 'production' && reload === true){%>
 <script src="/reload/reload.js"></script>
