--- a/assets/admin/blog/index.scss
+++ b/assets/admin/blog/index.scss
@@ -42,7 +42,9 @@
 }
 
 .blog_list{
-  margin-top: 30px;
+  &.hd{
+    margin-top: 30px;
+  }
   border:1px solid #efefef;
   .item{
     padding:10px;
@@ -50,7 +52,11 @@
     span{
       display: inline-block;
       padding:0 10px;
-
+      width: 20%;
+      &.fun{
+        color: #3a82ff;
+        cursor: pointer;
+      }
     }
     &:last-child{
       border-bottom:none;
