--- a/template/admin/blog.ejs
+++ b/template/admin/blog.ejs
@@ -35,7 +35,14 @@
       </div>
     </div>
   </div>
-
+  <div class="blog_list hd">
+    <div class="item">
+      <span>ID</span>
+      <span>标题</span>
+      <span>摘要</span>
+      <span>操作</span>
+    </div>
+  </div>
   <div class="J_blogList blog_list"></div>
 
 </div>
