--- a/template/admin/blog.ejs
+++ b/template/admin/blog.ejs
@@ -31,16 +31,17 @@
     </div>
     <div class="item">
       <div class="fun_btn">
+        <span class="J_cancel btn">取消</span>
         <span class="J_save btn">保存</span>
       </div>
     </div>
   </div>
   <div class="blog_list hd">
-    <div class="item">
-      <span>ID</span>
-      <span>标题</span>
-      <span>摘要</span>
-      <span>操作</span>
+    <div class="row_item">
+      <div class="item">ID</div>
+      <div class="item">标题</div>
+      <div class="item">摘要</div>
+      <div class="item">操作</div>
     </div>
   </div>
   <div class="J_blogList blog_list"></div>
