--- a/template/admin/login.ejs
+++ b/template/admin/login.ejs
@@ -21,8 +21,10 @@
         密&nbsp;&nbsp; 码: <input type="password" class="J_password">
     </div>
     <div class="item_label">
+        <a href="/">首页</a>
         <input type="button" value="提交" class="J_loginBtn">
     </div>
+
 </div>
 
 <script src="/admin_login.build.js"></script>
